# MagmaCraft-Bot

./: .env.example  .replit  ACCESS_YOUR_WEBSITE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP.md  Dockerfile  FINAL_DEPLOYMENT_CHECKLIST.md  FREE_HOSTING_ALTERNATIVES.md  GITHUB_EXPORT_FIX.md  GITHUB_EXPORT_GUIDE.md  Procfile  RAILWAY_SETUP.md  README.md  README_DEPLOYMENT.md  RENDER_502_FIX.md  RENDER_DATABASE_SETUP.md  RENDER_DATABASE_STEPS.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_STEPS.md  RENDER_FINAL_DEPLOY.md  RENDER_FINAL_SETUP.md  RENDER_FIX.md  app.py  debug_api.py  docker-compose.yml  gunicorn.conf.py  init_db.py  main.py  minimal_requirements.txt  models.py  populate_sample_data.py  production_requirements.txt  pyproject.toml  render.yaml  render_app.py  render_requirements.txt  replit.md  requirements.txt  requirements_for_render.txt  run_web_only.py  (+4 more)
attached_assets/: Pasted--2025-07-22-22-33-54-085-ERROR-in-app-Exception-on-GET-Traceback-most-recent-call-last-Fi-1753223686564_1753223686566.txt
bot/: __init__.py  client.py  commands.py  events.py  minecraft_utils.py  moderation.py  music_player.py  stats_tracker.py  utils.py  voice_bridge.py
static/css/: dashboard.css  login.css  server_selection.css
static/js/: dashboard.js  server_selection.js
templates/: config_error.html  dashboard.html  login.html  server_selection.html
