[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "flask>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
    "python-ffmpeg>=2.0.12",
    "sqlalchemy>=2.0.41",
    "youtube-dl>=2021.12.17",
    "yt-dlp>=2025.7.21",
]
